# sqlparser

./: .gitignore  BUILD.bazel  Makefile  bench_test.go  consistent_test.go  digester.go  digester_test.go  generate.go  go.mod  go.sum  hintparser.go  hintparser.y  hintparser_test.go  hintparserimpl.go  keywords.go  keywords_test.go  lexer.go  lexer_test.go  main_test.go  misc.go  parser.y  parser.y.1  parser.y.2  parser_test.go  reserved_words_test.go  yy_parser.go
ast/: BUILD.bazel  advisor.go  ast.go  base.go  base_test.go  custom.go  ddl.go  ddl_test.go  dml.go  dml_test.go  expressions.go  expressions_test.go  flag_test.go  format_test.go  functions.go  functions_test.go  misc.go  misc_test.go  procedure.go  procedure_test.go  stats.go  util_test.go
auth/: BUILD.bazel  auth.go  caching_sha2.go  caching_sha2_test.go  mysql_native_password.go  tidb_sm3_test.go
charset/: BUILD.bazel  charset.go  encoding_base.go  encoding_test.go
cmd/: .gitignore  main.go  payload.go
docs/: quickstart.md
duration/: BUILD.bazel
format/: BUILD.bazel
generate_keyword/: BUILD.bazel  genkeyword.go
goyacc/: BUILD.bazel  format_yacc.go  main.go
model/: BUILD.bazel  ddl.go  ddl_test.go  model.go  model_test.go  reorg.go
mysql/: BUILD.bazel  const.go
opcode/: BUILD.bazel  opcode.go
parser/: circle.yml  digester.go  digester_test.go  hintparser.go  hintparser.y  hintparser_test.go  hintparserimpl.go  lexer.go  lexer_test.go  misc.go  parser.y  parser.y.bak  parser_test.go  reserved_words_test.go  yy_parser.go
parser/ast/: advisor.go  ast.go  base.go  custom.go  ddl.go  ddl_test.go  dml.go  dml_test.go  expressions.go  expressions_test.go  flag_test.go  format_test.go  functions.go  functions_test.go  misc.go  misc_test.go  procedure.go  stats.go  util_test.go
parser/auth/: auth.go  caching_sha2.go  mysql_native_password.go
parser/charset/: charset.go  encoding.go  encoding_base.go  encoding_test.go
parser/docs/: quickstart.md  update-parser-for-tidb.md
parser/goyacc/: format_yacc.go  main.go
parser/model/: ddl.go  model.go  model_test.go  reorg.go
parser/mysql/: const.go  error.go
parser/opcode/: opcode.go
parser/terror/: terror.go
parser/test_driver/: test_driver.go  test_driver_datum.go
parser/types/: etc.go  field_type.go  field_type_test.go
parser2/: Makefile  bench_test.go  circle.yml  consistent_test.go  digester.go  digester_test.go  export_test.go  hintparser.go  hintparser.y  hintparser_test.go  hintparserimpl.go  lexer.go  lexer_test.go  misc.go  parser.y  parser.y.bak  parser_test.go  reserved_words_test.go  yy_parser.go
parser2/ast/: advisor.go  ast.go  base.go  ddl.go  ddl_test.go  dml.go  expressions.go  expressions_test.go  flag_test.go  format_test.go  functions.go  functions_test.go  misc.go  misc_test.go  stats.go  util_test.go
parser2/auth/: auth.go  mysql_native_password.go
parser2/charset/: charset.go  encoding.go  encoding_test.go
parser2/docs/: quickstart.md  update-parser-for-tidb.md
parser2/goyacc/: format_yacc.go  main.go
parser2/model/: ddl.go  model.go  model_test.go
parser2/mysql/: const.go
parser2/terror/: terror.go
parser2/test_driver/: test_driver.go  test_driver_datum.go
parser2/types/: etc.go  field_type.go  field_type_test.go
terror/: BUILD.bazel  terror.go
test/: main.go
test2/: main.go
test3/: main.go
test3/cmd/: main.go
test4/: main.go
test_driver/: BUILD.bazel  test_driver.go  test_driver_datum.go
tests/: example.txt
tests/sql-injection-payload-list/detect/: Generic_SQLI.txt
tests/test3/: all.txt  example.txtx
tidb/: BUILD.bazel
types/: BUILD.bazel  etc.go  etc_test.go  field_type.go  field_type_test.go
