load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "ast",
    srcs = [
        "advisor.go",
        "ast.go",
        "base.go",
        "ddl.go",
        "dml.go",
        "expressions.go",
        "flag.go",
        "functions.go",
        "misc.go",
        "procedure.go",
        "stats.go",
        "util.go",
    ],
    importpath = "github.com/dean2021/sqlparser/ast",
    visibility = ["//visibility:public"],
    deps = [
        "//sqlparser/auth",
        "//sqlparser/charset",
        "//sqlparser/format",
        "//sqlparser/model",
        "//sqlparser/mysql",
        "//sqlparser/opcode",
        "//sqlparser/terror",
        "//sqlparser/tidb",
        "//sqlparser/types",
        "@com_github_pingcap_errors//:errors",
        "@com_github_pingcap_failpoint//:failpoint",
    ],
)

go_test(
    name = "ast_test",
    timeout = "short",
    srcs = [
        "base_test.go",
        "ddl_test.go",
        "dml_test.go",
        "expressions_test.go",
        "flag_test.go",
        "format_test.go",
        "functions_test.go",
        "misc_test.go",
        "procedure_test.go",
        "util_test.go",
    ],
    embed = [":ast"],
    flaky = True,
    shard_count = 50,
    deps = [
        "//sqlparser",
        "//sqlparser/auth",
        "//sqlparser/charset",
        "//sqlparser/format",
        "//sqlparser/model",
        "//sqlparser/mysql",
        "//sqlparser/test_driver",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
    ],
)
